--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	<!-- <link rel="preload" href="/css/style.css" as="style"> -->
-	<link rel="preload" href="css/preload.css" as="style">
-	<link rel="preload" href="js/preload.js" as="script">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/timeline.css">
+	<link rel="preload" href="../css/preload.css" as="style">
+	<link rel="preload" href="../js/preload.js" as="script">
+	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" href="../css/timeline.css">
 	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap" rel="stylesheet">
